i fixed some contrast color in span

--- a/styles/place.css
+++ b/styles/place.css
@@ -2,6 +2,7 @@
     --primary-color: #28047e;
     --white-color: #ffffff;
     --secondary-color: #ba1919e0;
+    --light-color: #febbbbe0;
 
 }
 
@@ -65,6 +66,6 @@ main section {
 
 }
 
-span {
-    color: var(--secondary-color);
+footer span {
+    color: var(--light-color);
 }
